--- a/index.html
+++ b/index.html
@@ -11,13 +11,96 @@
         <meta name="author" content="Jahongir Murodboev">
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&amp;display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
         <!-- CSS files -->
         <link rel="stylesheet" href="css/style.css">
     </head>
 <body>
-    
+
+    <main class="app">
+
+        <section class="greeting">
+            <h2 class="title">
+                What's up, <input type="text" id="name" placeholder="Name here">
+            </h2>
+        </section>
+
+        <section class="create-todo">
+            <h3>CREATE A TODO</h3>
+            <form id="new-todo-form">
+                <h4>What's on your todo list?</h4>
+                <input 
+                    type="text"
+                    name="content"
+                    id="content"
+                    placeholder="e.g. read a book" />
+                <h4>Pick a category</h4>
+
+                <div class="options">
+                    <label>
+                        <input
+                            type="radio" 
+                            name="category" 
+                            id="category1" 
+                            value="business" />
+                        <span class="bubble business"></span>
+                        <div>Business</div>
+                    </label>
+
+                    <label>
+                        <input
+                            type="radio" 
+                            name="category" 
+                            id="category2" 
+                            value="perosnal" />
+                        <span class="bubble personal"></span>
+                        <div>Personal</div>
+                    </label>
+                </div>
+
+                <input type="submit" value="Add todo" />
+            </form>
+        </section>
+
+        <section class="todo-list">
+            <h3>TODO List</h3>
+            <div class="list" id="todo-list">
+                <div class="todo-item">
+                    <label>
+                        <input type="checkbox" />
+                        <span class="bubble business"></span>
+                    </label>
+
+                    <div class="todo-content">
+                        <input type="text" value="Read a book" readonly />
+                    </div>
+
+                    <div class="actions">
+                        <button class="edit">Edit</button>
+                        <button class="delete">Delete</button>
+                    </div>
+                </div>
+
+                <div class="todo-item">
+                    <label>
+                        <input type="checkbox" />
+                        <span class="bubble personal"></span>
+                    </label>
+
+                    <div class="todo-content">
+                        <input type="text" value="Drink a milk" readonly />
+                    </div>
+
+                    <div class="actions">
+                        <button class="edit">Edit</button>
+                        <button class="delete">Delete</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
     
     <!-- Javascript files -->
     <script src="js/app.js"></script>
