--- a/index.html
+++ b/index.html
@@ -18,89 +18,50 @@
     </head>
 <body>
 
-    <main class="app">
+    <!-- App Wrapper -->
+	<main class="app">
+		<!-- Greeting -->
+		<section class="greeting">
+			<h2 class="title">
+				What's up, <input type="text" id="name" placeholder="Name here" />
+			</h2>
+		</section>
 
-        <section class="greeting">
-            <h2 class="title">
-                What's up, <input type="text" id="name" placeholder="Name here">
-            </h2>
-        </section>
+		<!-- New Todo -->
+		<section class="create-todo">
+			<h3>CREATE A TODO</h3>
+			<form id="new-todo-form">
+				<h4>What's on your todo?</h4>
+				<input 
+					type="text" 
+					placeholder="e.g. Get some milk"
+					name="content"
+					id="content" />
+				
+				<h4>Pick a category</h4>
+				<div class="options">
+					<label>
+						<input type="radio" name="category" id="category1" value="business" /> 
+						<span class="bubble business"></span>
+						<div>Business</div>
+					</label>
+					<label>
+						<input type="radio" name="category" id="category2" value="personal" />
+						<span class="bubble personal"></span>
+						<div>Personal</div>
+					</label>
+				</div>
 
-        <section class="create-todo">
-            <h3>CREATE A TODO</h3>
-            <form id="new-todo-form">
-                <h4>What's on your todo list?</h4>
-                <input 
-                    type="text"
-                    name="content"
-                    id="content"
-                    placeholder="e.g. read a book" />
-                <h4>Pick a category</h4>
+				<input type="submit" value="Add todo" />
+			</form>
+		</section>
 
-                <div class="options">
-                    <label>
-                        <input
-                            type="radio" 
-                            name="category" 
-                            id="category1" 
-                            value="business" />
-                        <span class="bubble business"></span>
-                        <div>Business</div>
-                    </label>
-
-                    <label>
-                        <input
-                            type="radio" 
-                            name="category" 
-                            id="category2" 
-                            value="perosnal" />
-                        <span class="bubble personal"></span>
-                        <div>Personal</div>
-                    </label>
-                </div>
-
-                <input type="submit" value="Add todo" />
-            </form>
-        </section>
-
-        <section class="todo-list">
-            <h3>TODO List</h3>
-            <div class="list" id="todo-list">
-                <div class="todo-item">
-                    <label>
-                        <input type="checkbox" />
-                        <span class="bubble business"></span>
-                    </label>
-
-                    <div class="todo-content">
-                        <input type="text" value="Read a book" readonly />
-                    </div>
-
-                    <div class="actions">
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
-                    </div>
-                </div>
-
-                <div class="todo-item">
-                    <label>
-                        <input type="checkbox" />
-                        <span class="bubble personal"></span>
-                    </label>
-
-                    <div class="todo-content">
-                        <input type="text" value="Drink a milk" readonly />
-                    </div>
-
-                    <div class="actions">
-                        <button class="edit">Edit</button>
-                        <button class="delete">Delete</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    </main>
+		<!-- Todo List -->
+		<section class="todo-list">
+			<h3>TODO LIST</h3>
+			<div class="list" id="todo-list"></div>
+		</section>
+	</main>
     
     <!-- Javascript files -->
     <script src="js/app.js"></script>
